[package]
name = "hash_join_cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "file_handling"
path = "src/lib/main.rs"

[[bin]]
name = "file_gen"
path = "src/bin/generate_files.rs"

[[bin]]
name = "test"
path = "src/bin/test_read_write.rs"

[dependencies]
rand = "0.8.5"
blake3 = "1.3.3"
